--- a/src/components/ClubDetail/ClubDetail.css
+++ b/src/components/ClubDetail/ClubDetail.css
@@ -26,3 +26,11 @@
     width: 500px;
     height: 300px;
 }
+.icon{
+    margin: auto;
+    width: 20%;
+    
+    display: flex;
+    justify-content: space-between;
+   
+}
